[package]
name = "ortts_server"
version.workspace = true
edition.workspace = true
publish.workspace = true
readme.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
name = "ortts_server"
path = "src/lib.rs"

[dependencies]
ortts_model_chatterbox_multilingual.workspace = true
ortts_shared.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
utoipa.workspace = true
utoipa-axum.workspace = true
utoipa-scalar.workspace = true
